Removed a comment; Fixed a bug with the navbar not showing on what part os the website the user was; Added guard causes to home template.

--- a/static/styles/navbar.css
+++ b/static/styles/navbar.css
@@ -30,6 +30,26 @@
 	   border-bottom-color: white;
 }
 
+.navbar-item.current {
+	height: 100%;
+	display: flex;
+	align-items: center;
+	text-decoration: none;
+	color: white;
+	padding-left: 1%;
+	padding-right: 1%;
+	border-bottom: 0.18rem solid #16a085;
+	transition: background-color 0.15s,
+	color 0.15s,
+	border-bottom-color 0.15s;
+}
+
+.navbar-item.current:hover {
+	color: #141a1b;
+	background-color: #16a085;
+	   border-bottom-color: white;
+}
+
 @media screen and (min-width: 5120px) {
 	.header {
 		min-height: 5rem;
